# fitmentor

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  mise.toml  pyproject.toml
.zed/: settings.json
backend/: .dockerignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  docker-compose.prod.yml  fly.toml  pyproject.toml
backend/app/: database.py  main.py  models.py  trainings.py
backend/app/prompts/: suggest_menu.py
backend/app/services/: trainer.py
frontend/: Dockerfile.dev  Dockerfile.prod  README.md  biome.json  components.json  docker-compose.prod.yml  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/api/: schema.ts
frontend/src/features/trainings/: types.ts
frontend/src/features/trainings/components/: suggestion-modal.tsx  training-selector.tsx
frontend/src/features/trainings/constants/: exercises.ts
frontend/src/styles/: globals.css
