[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "google-genai>=1.70.0",
    "python-dotenv>=1.2.2",
]
[tool.fastapi]
entrypoint = "main:app"

[dependency-groups]
dev = [
    "ruff>=0.15.9",
    "ty>=0.0.28",
]
